src/layouts/index.css
.gradient {
  background: rgb(255, 183, 0);
  background: linear-gradient(
    0deg,
    rgba(255, 183, 0, 1) 0%,
    rgba(255, 255, 0, 1) 100%
  );
}

.navbar {
  border-bottom: 1px solid #ccc;
  position: sticky;
  width: 100%;
  top: 0;
  z-index: 10;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.navbar h1 {
  font-size: 20px;
  margin: inherit;
  padding: inherit;
  font-weight: bold;
}

.navbar h2 {
  font-size: 14px;
  margin: inherit;
  padding: inherit;
  text-transform: uppercase;
  color: #333;
}

.jumbotron.gradient {
  color: white;
  text-transform: uppercase;
  font-weight: bold;
}

.jumbotron-image {
  width: 105%;
  position: relative;
  left: -2.5%;
}

.jumbtron-image-container {
  position: relative;
  margin-bottom: 25px;
}

.navbar-brand.navbar-brand {
  text-transform: uppercase;
  color: white;
  font-weight: bold;
}

.navbar-brand.navbar-brand:hover {
  color: #777;
}

.navbar-brand.navbar-brand:focus {
  color: white;
}

.navbar-brand-image {
  width: 100%;
  max-width: 650px;
  transition: opacity ease-in-out 0.15s;
}

.navbar-brand-image:hover,
.navbar-brand-image:active {
  opacity: 0.5;
}

.lesson {
  margin: 15px;
  padding: 15px;
  background-color: #fff;
  border-radius: 8px;
  overflow: scroll;
}

.lesson p {
  clear: both;
}

.lesson-links {
  font-size: 18px;
  padding: 15px 0;
}

.next {
  float: right;
}

.prev {
  float: left;
}

.lesson-title {
  color: white;
  text-transform: uppercase;
  font-weight: bold;
}

.doggos {
  width: 100%;
  border: 1px solid #666;
  border-radius: 5px;
}

